--- a/frontend/electron-react-app/package.json
+++ b/frontend/electron-react-app/package.json
@@ -2,6 +2,11 @@
   "name": "electron-react-app",
   "private": true,
   "version": "0.0.0",
+  "description": "Electron React Application",
+  "author": {
+    "name": "Your Name",
+    "email": "your.email@example.com"
+  },
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -52,6 +57,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "electron": "^36.2.0",
     "electron-builder": "^26.0.12",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
