--- a/frontend/electron-react-app/package.json
+++ b/frontend/electron-react-app/package.json
@@ -57,6 +57,7 @@
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
+    "@types/electron": "^1.4.38",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
