--- a/frontend/electron-react-app/package.json
+++ b/frontend/electron-react-app/package.json
@@ -16,7 +16,7 @@
     "preview": "vite preview",
     "electron:dev": "node scripts/electron-dev.js",
     "electron:build": "electron-builder",
-    "package:win": "npm run build && electron-builder --win --x64",
+    "package:win": "electron-builder --win --x64",
     "package:mac": "npm run build && electron-builder --mac",
     "package:linux": "npm run build && electron-builder --linux"
   },
@@ -51,7 +51,9 @@
     "@mui/material": "^5.15.10",
     "@tanstack/react-query": "^5.20.5",
     "axios": "^1.6.7",
+    "buffer": "^6.0.3",
     "plotly.js-dist": "^3.0.1",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1"
