improved sidebar, footer, header, added components reusability and grids

--- a/frontend/electron-react-app/package.json
+++ b/frontend/electron-react-app/package.json
@@ -13,6 +13,9 @@
     "dev": "node scripts/dev.js",
     "build": "node scripts/build.js",
     "lint": "eslint --ext .ts,.tsx src",
+    "lint:fix": "eslint --ext .ts,.tsx src --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx,css,md,json}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,css,md,json}\"",
     "preview": "vite preview",
     "electron:dev": "node scripts/electron-dev.js",
     "electron:build": "electron-builder",
@@ -53,9 +56,18 @@
   "devDependencies": {
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
     "electron": "^28.3.3",
     "electron-builder": "^24.9.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "prettier": "^3.5.3",
     "typescript": "^5.3.3",
     "vite": "^6.3.5"
   }
